feat: adicionar o grid

--- a/index.html
+++ b/index.html
@@ -4,32 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.index.css">
-    <title>Atividade 05 - responsivo flexbox</title>
+    <title>Atividade 09 - Grid Css básico</title>
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1>header - Flavia </h1>
-        </header>
-        <nav>
-            <h1>nav</h1>
-        </nav>
-        <div class="content">
-            <div class="main-content">
-                <section>
-                    <h1>section</h1>
-                </section>
-                <article>
-                    <h1>article</h1>
-                </article>
-            </div>
-            <aside>
-                <h1>aside</h1>
-            </aside>
-        </div>
-        <footer>
-            <h1>footer - Mendes</h1>
-        </footer>
+    <div class="grid-container">
+            <div class="header">Header-Flavia</div>
+            <div class="nav">Nav</div>
+            <div class="section">Section</div>
+            <div class="article">Article</div>
+            <div class="aside">Aside</div>
+            <div class="footer">Footer-  Mendes</div>
     </div>
 </body>
 </html>
